# naarad

./: .gitignore  CLAUDE.md  README.md  REFERENCE.md  config.example.json  pyproject.toml
deploy/: configure.py  crontab.txt  install-all-hardened.sh  install-hardened.fish  install-hardened.sh  install.fish  install.sh  naarad-hardened.service.template  naarad.service  naarad.service.template  uninstall-all-hardened.sh  uninstall.fish  uninstall.sh
docs/: deploy.md  llm.md  tickers.md  water.md
docs/plans/: 2026-05-02-naarad-design.md
scripts/: gen_reference.py
src/naarad/: __init__.py  bot.py  commands.py  config.py  copilot_runner.py  db.py  runtime.py  startup.py  telegram_api.py
src/naarad/brief/: copilot.py  plain_renderer.py  prompt.py  quotes.py  sanitizer.py  sources.py
src/naarad/handlers/: auth.py  brief.py  llm.py  morning.py  quote.py  status.py  tickers.py  water.py  welcome.py
src/naarad/jobs/: _common.py  daily_brief.py  market_close.py  market_open.py  scheduler.py
src/naarad/llm/: __init__.py  claude.py  copilot.py  dispatch.py  runner.py  smoketest.py
src/naarad/morning/: scheduler.py
src/naarad/tickers/: eodhd.py
src/naarad/water/: copilot.py  messages.py  prompt.py  scheduler.py  state.py  status.py
tests/: test_bot.py  test_brief_prompt.py  test_brief_sanitizer.py  test_config_tickers.py  test_db.py  test_handlers_auth.py  test_handlers_brief.py  test_handlers_llm.py  test_handlers_quote.py  test_handlers_status.py  test_handlers_tickers.py  test_handlers_water.py  test_handlers_welcome.py  test_jobs_market.py  test_llm.py  test_morning_scheduler.py  test_plain_renderer.py  test_reference_drift.py  test_runtime.py  test_startup.py  test_tickers_eodhd.py  test_water_messages.py  test_water_scheduler.py  test_water_state.py
