[project]
name = "naarad"
version = "0.1.0"
description = "Personal Telegram bot: daily brief, market open/close, escalating water reminders."
authors = [
    { name = "MayankVachher", email = "mayankv0207@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.6",
    "httpx>=0.27",
    "pydantic>=2.8",
    "tzdata>=2024.1",
    "feedparser>=6.0",
    "astral>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
    "ruff>=0.6",
]

[project.scripts]
naarad = "naarad.bot:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade, B = flake8-bugbear.
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # long lines — let format handle it; many doc strings are intentionally wide.
    "B008",  # function call in default argument — pydantic Field(default_factory=...) is fine.
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
